--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
     <p>Head of Finance & Administration at Nebula Systems Corporation</p>
     <nav>
       <a href="https://github.com/juliang2127" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/juliangirod" target="_blank">LinkedIn</a>
+      <a href="www.linkedin.com/in/julian-girod-6a5289138" target="_blank">LinkedIn</a>
     </nav>
   </header>
 
   <main>
     <section id="about">
       <h2>About Me</h2>
-      <p>Hi—I’m Julian, I handle finance, equity and ops at Nebula Systems. Welcome to my personal site.</p>
+      <p>Hi—I’m Julian, I handle finance and ops at Nebula Systems. Welcome to my personal site.</p>
+    </section>
+
+    <section id="hero">
+      <!-- other content -->
+      <img src="/Photo/IMG_7416.HEIC" alt="Descriptive text" />
     </section>
 
     <section id="projects">
       <h2>Projects & Writing</h2>
       <ul>
-        <li><a href="#">Nebula Exchange (DeFi DEX tooling)</a></li>
-        <li><a href="#">Managing in Organizations: study notes</a></li>
+        <li><a href="#">Nebula Exchange</a></li>
         <!-- add more here -->
       </ul>
     </section>
