with photo pt 2

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="hero">
       <!-- other content -->
-      <img src="/Photo/IMG_7416.HEIC" alt="Descriptive text" />
+      <img src="/Photo/IMG_7416.HEIC" alt="Descriptive text" class="hero-image" />
     </section>
 
     <section id="projects">
