--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Head of Finance & Administration at Nebula Systems Corporation</p>
     <nav>
       <a href="https://github.com/juliang2127" target="_blank">GitHub</a>
-      <a href="www.linkedin.com/in/julian-girod-6a5289138" target="_blank">LinkedIn</a>
+      <a href="https://linkedin.com/in/julian-girod-6a5289138" target="_blank">LinkedIn</a>
     </nav>
   </header>
 
