fixed url and image

--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
     <h1>Julian Girod</h1>
     <p>Head of Finance & Administration at Nebula Systems Corporation</p>
     <nav>
-      <a href="https://github.com/juliang2127" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/julian-girod-6a5289138" target="_blank">LinkedIn</a>
+      <a href="https://github.com/juliang2127" target="_blank" rel="noopener noreferrer">GitHub</a>
+      <!-- make sure you include “https://” -->
+      <a href="https://www.linkedin.com/in/julian-girod-6a5289138"
+         target="_blank"
+         rel="noopener noreferrer">
+        LinkedIn
+      </a>
+    </nav>
+    </header>
     </nav>
   </header>
+
+
 
   <main>
     <section id="about">
